# face-gallery-monorepo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.py
backend/: .gitignore  README.md  pyproject.toml  requirements-minimal.txt  requirements.txt  verify_setup.py
backend/examples/: find_person_folder.py  find_person_folder_fixed.py  sort_images_by_person.py
backend/src/face_search/: __init__.py  _operations.py  deduplication.py  face.py  indexer.py  paths.py
backend/src/face_search/cli/: __init__.py  main.py
backend/src/face_search/search/: __init__.py  clustering.py  engine.py  results.py
backend/src/face_search/storage/: __init__.py  collection_lock.py  collection_manager.py  faiss_index.py  metadata_db.py
backend/tests/: test_gpu_setup.py
backend/tests/integration/: __init__.py  test_dataset_utils.py  test_end_to_end.py
backend/tests/unit/: test_collection_manager.py  test_deduplication.py  test_face.py  test_faiss_index.py  test_indexer.py  test_metadata_db.py  test_models.py  test_search.py
config/: README.md  config.example.json
docker/: Dockerfile  Dockerfile.cpu
docs/: GET_STARTED.md  INSTALLATION.md  SETUP_STEPS.md
frontend/: DESIGN.md  README.md  __init__.py  app.py  config_loader.py  requirements-face-search.txt  requirements.txt
frontend/static/: app.js  index.html  styles.css
scripts/: install.sh  run.sh  verify.sh
tests/: test_frontend_smoke.py
